[metadata]
name = steal_douyin_video_content_url
version = attr: steal_douyin_video_content_url.__VERSION__
description = Steal douyin.com video content url
long_description = file: README.md, LICENSE
url = https://github.com/FredericDT/steal-douyin-video-content-url
keywords = douyin, video, url
license = GPLv3 License
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir=
    =src

install_requires =
    beautifulsoup4==4.11.1
    requests==2.28.1
    urllib3==1.26.13

[options.entry_points]
console_scripts =
    douyin-get = steal_douyin_video_content_url.steal_douyin_video_content_url:main

[options.packages.find]
where=src